# gma2-mcp-telnet

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  keyword_combos_full.json  pyproject.toml  scan_tree.py
.claude/: settings.local.json
.githooks/: pre-commit
doc/: branch-evolution-audit.md  cd-tree-mcp-tool-correlation-matrix.md  command-builders.md  ma2-cd-tree-full.md  ma2-cd-tree_new.md  monetization-strategy-audit.md
scripts/: add_mac_auras.py  categorize_tools.py  create_filter_library.py  create_matricks_library.py  probe_programmer_state.py  rag_ingest.py  rag_ingest_web.py  rag_query.py  test_function_object_combos.py
skills/: INDEX.md  SCHEMA.md
src/: grandMA2_v3_9_telnet_keyword_vocabulary.json  navigation.py  prompt_parser.py  prompts.py  resources.py  server.py  telnet_client.py  tools.py  vocab.py
tests/: conftest.py  test_assignment.py  test_attribute.py  test_call.py  test_categorization.py  test_cd_behavior.py  test_cd_tree_validation.py  test_crawl_web.py  test_deep_path.py  test_edit.py  test_empty.py  test_filter_library.py  test_info.py  test_labeling.py  test_list_format.py  test_live_integration.py  test_macro.py  test_matricks.py  test_navigation.py  test_navigation_commands.py  test_new_builders.py  test_park.py  test_playback.py  test_prompt_parser.py  test_prompts.py  test_rag_embed.py  test_rag_store.py  test_resources.py  test_selection.py  test_store.py  test_telnet_client.py  test_tempfader.py  test_tools.py  test_transport.py  test_values.py  test_variables.py  test_vocab.py  test_wildcard.py
(+63 files in other folders)
